--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "gmail-send": "^1.2.14",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
+    "react-bootstrap-time-picker": "^2.0.0",
+    "react-compound-timer": "^1.1.1",
     "react-dom": "^16.8.6",
+    "react-image-gallery": "^0.8.18",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
